--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,12 @@
    <repository>
             <id>deployment</id>
             <name>Internal Releases</name>
-            <url>http://192.168.254.137/:8081/repository/Cloud-Gen-Release/</url>
+            <url>http://192.168.231.137:8081/repository/Cloud1/</url>
         </repository>
         <snapshotRepository>
             <id>deployment</id>
             <name>Internal Snapshot Releases</name>
-            <url>http://192.168.254.137:8081/repository/Cloud-Gen-Snap/</url>
+            <url>http://192.168.231.137:8081/repository/Gen1/</url>
         </snapshotRepository>
     <site>
       <id>site-server</id>
